Isolated fix for invisible header still being clickable
* * *

This commit was sponsored by The Hoodie Firm.
You can hire The Hoodie Firm:
http://go.hood.ie/thehoodiefirm

--- a/src/stylesheets/docs.css
+++ b/src/stylesheets/docs.css
@@ -270,3 +270,9 @@
   background-size: 1px 2px;
   text-shadow: 2px 0px 0 #FFF, -2px 0 0 #FFF;
 }
+
+header.invisible{
+  -webkit-transform: translate(0, -102px);
+  -ms-transform: translate(0, -102px);
+  transform: translate(0, -102px);
+}
